<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fouadaha.tarea07zapatos.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:title="@string/zapatillas_title" />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_margin="@dimen/margin_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinator_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/horizontal_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Scroll "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearlayout_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_shoe_1"
                        android:layout_width="410dp"
                        android:layout_height="400dp"
                        android:src="@drawable/img_shoe_1" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />


                    <ImageView
                        android:id="@+id/img_shoe_2"
                        android:layout_width="410dp"
                        android:layout_height="400dp"
                        android:src="@drawable/img_shoe_2" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/img_shoe_3"
                        android:layout_width="410dp"
                        android:layout_height="400dp"
                        android:src="@drawable/img_shoe_3" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/img_shoe_4"
                        android:layout_width="410dp"
                        android:layout_height="400dp"
                        android:src="@drawable/img_shoe_4" />
                </LinearLayout>
            </HorizontalScrollView>

            <CheckBox
                android:id="@+id/iconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_favorite"
                android:text="@string/nº_favorites"
                app:layout_constraintCircle="@+id/horizontal_scroll_view"
                app:layout_constraintCircleAngle="140"
                app:layout_constraintCircleRadius="220dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view" />


            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="@dimen/margin_s"
                android:src="@drawable/img_profile"
                app:layout_constraintCircleRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view" />

            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/size_m"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_profile"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="0.5"
                app:layout_constraintStart_toEndOf="@+id/img_profile"
                app:layout_constraintTop_toBottomOf="@+id/text_username" />

            <TextView
                android:id="@+id/text_nº_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nº_users_rating"
                app:layout_constraintStart_toEndOf="@+id/rating_bar"
                app:layout_constraintTop_toBottomOf="@+id/text_username" />

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view" />

            <Button
                android:id="@+id/button_adds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_adds"
                app:layout_constraintStart_toEndOf="@+id/img_profile"
                app:layout_constraintTop_toBottomOf="@id/rating_bar" />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/button_adds" />


            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zapatillas_title"
                android:textSize="@dimen/size_x"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_adds" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                app:layout_constraintTop_toBottomOf="@+id/text_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>